fixes button color overspill

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -44,7 +44,7 @@ footer {
 }
 
 button.table{
-  width: 60%;
+  width: 80%;
   margin: 2px;
 }
 
